# machine-learning-safari

./: .flake8  LICENSE  README.md  noxfile.py  pyproject.toml  setup.cfg
.github/workflows/: coverage.yml  tests.yml
docs/: conf.py  index.rst  reference.rst
machine_learning_safari/: __init__.py  core.py  exceptions.py  k_nearest_neighbors.py  linear_regression.py
src/machine_learning_safari/: __init__.py  core.py  exceptions.py
src/mlsafari/: __init__.py  core.py  exceptions.py  k_means.py
tests/: test_core.py  test_k_means.py  test_null_model.py
