[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "Machine Learning Safari"
packages = [{include = "machine_learning_safari", from = "src"}]
version = "0.1.0"
authors = [
    "Tim Hargreaves <hello@timhargreaves.com>",
    "Patricio Hernandez Senosiain <patricio.hernandez-senosiain@warwick.ac.uk>"
]
description = "A broad collection of machine learning algorithms implemented in Python"
license = "MIT"
readme = "README.md"
homepage = "https://thargreaves.github.io/machine-learning-safari/"
repository = "https://github.com/THargreaves/machine-learning-safari/"
keywords = ["machine-learning", "algorithms", "statistics"]

[tool.poetry.dependencies]
python = "3.9"
numpy = "^1.21.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
coverage = {version = "^5.5", extras = ["toml"]}
pytest-cov = "^2.12.1"
flake8 = "^3.9.2"
flake8-import-order = "^0.18.1"
mypy = "^0.910"
flake8-docstrings = "^1.6.0"
darglint = "^1.8.0"
xdoctest = "^0.15.8"
Pygments = "^2.10.0"
Sphinx = "^4.2.0"
sphinx-autodoc-typehints = "^1.12.0"
codecov = "^2.1.12"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["machine_learning_safari"]

[tool.coverage.report]
show_missing = true
