[metadata]
name = machine_learing_safari
version = 0.0.1
author = Tim Hargreaves, Patricio Hernandez
author_email = hello@timhargreaves.com
description = A broad collection of machine learning algorithms implemented in Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/THargreaves/machine-learning-safari
project_urls =
    Bug Tracker = https://github.com/THargreaves/machine-learning-safari/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src